--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "async-throttle"
-version = "0.1.0"
+version = "0.2.0"
 description = "Multipurpose asyncio throttle"
-authors = ["Joe Nudell <jnu@stanford.edu>"]
+authors = ["Joe Nudell <jnudell@hks.harvard.edu>"]
 license = "MIT"
 readme = "README.md"
 packages = [{include = "async_throttle"}]
