--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ optional = true
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.0.2"
+pytest = "^7.4.2"
+pytest-asyncio = "^0.21.1"
 
 [build-system]
 requires = ["poetry-core"]
